--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.0/css/foundation.min.css"></script>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <input type="text" placeholder="Company Ticker" id="stockName">
-    <input type="text" placeholder="Quantity" id="stockQty">
-    <input type="submit" value="buy" id="buyStocks" class>
+    <input type="text" placeholder="Enter Company Ticker..." id="stockName">
+    <input type="text" placeholder=" Enter qty to buy..." id="stockQty">
+    <input type="submit" value="buy" id="buyStocks">
   <h1>My Portfolio</h1>
     <table>
       <th>
@@ -15,12 +14,12 @@
         <td>Price</td>
         <td>Quantity</td>
         <td>Day Change</td>
-        <td>""</td>
+        <td></td>
       </th>
     </table>
-    <h2>Total
+    <h2>Total</h2>
       <p><div id="priceTotal"></p>
-    </h2>
+
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/lodash/3.0.0/lodash.min.js"></script>
     <script src ="main.js"></script>
