adding stock rows to the portfolio works

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <input type="submit" value="buy" id="buyStocks">
   <h1>My Portfolio</h1>
     <table>
-      <th>
-        <td>Name</td>
-        <td>Price</td>
-        <td>Quantity</td>
-        <td>Day Change</td>
-        <td></td>
-      </th>
+      <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Day Change</th>
+        <th>Day Change %</th>
+        <th></th>
+      </tr>
     </table>
     <h2>Total</h2>
       <p><div id="priceTotal"></p>
