total adjusts correctly when stocks are added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <th></th>
       </tr>
     </table>
-    <h2>Total</h2>
+    <h2 id="portfolioTotal">Total</h2>
       <p><div id="priceTotal"></p>
 
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
