--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.0/css/foundation.css">
     <link rel="stylesheet" href="main.css">
+    <title>Track Your Portfolio</title>
   </head>
   <body>
-    <input type="text" placeholder="Enter Company Ticker..." id="stockName">
-    <input type="text" placeholder=" Enter qty to buy..." id="stockQty">
-    <input type="submit" value="buy" id="buyStocks">
-  <h1>My Portfolio</h1>
-    <table>
+   <div class="wrapper">
+    <h1>My Portfolio</h1>
+    <div class="input_wrapper">
+      <input type="text" placeholder="Enter Company Ticker..." id="stockName" class="stock_input">
+      <input type="text" placeholder=" Enter qty to buy..." id="stockQty" class="stock_input">
+      <input type="submit" value="buy" id="buyStocks" class="button">
+    </div>
+    <table class="table">
       <tr>
         <th>Name</th>
         <th>Price</th>
@@ -20,6 +25,7 @@
     </table>
     <h2 id="portfolioTotal">Total</h2>
       <p><div id="priceTotal"></p>
+    </div>
 
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/lodash/3.0.0/lodash.min.js"></script>
