remove button removes rows, but totals don't work correctly

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <th>Day Change %</th>
         <th></th>
       </tr>
+      <tbody>
+      </tbody>
     </table>
     <h2 id="portfolioTotal">Total</h2>
       <p><div id="priceTotal"></p>
