fixed issue with total breaking upon removing stock

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <table class="table">
       <tr>
         <th>Name</th>
-        <th>Price</th>
+        <th>Purchase Price</th>
+        <th>Current Price</th>
         <th>Quantity</th>
         <th>Day Change</th>
         <th>Day Change %</th>
