--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <th>Quantity</th>
         <th>Day Change</th>
         <th>Day Change %</th>
-        <th></th>
+        <th><input type="button" value="refresh" id="refreshPortfolio" class="button"</input></th>
       </tr>
       <tbody>
       </tbody>
     </table>
     <h2 id="portfolioTotal">Total</h2>
       <p><div id="priceTotal"></p>
-    </div>
+      </div>
 
     <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/lodash/3.0.0/lodash.min.js"></script>
